--- a/fodmap-app/index.html
+++ b/fodmap-app/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="S1_fLbIsFu4x8xdgYbbM7smZw4Mf-EN09UqwKQdYiMA" />
+  <meta name="description" content="Buscador con una amplia Base de Datos para de alimentos, indicando su valor de FODMAP sea alto, medio o bajo. Así como también su información nutricional.">
   <title>Tu FODMAP</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
