fix(lang tag on head)

--- a/fodmap-app/index.html
+++ b/fodmap-app/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html lang="es">
 
 <head>
+  <meta http-equiv="Content-Language" content="es">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="S1_fLbIsFu4x8xdgYbbM7smZw4Mf-EN09UqwKQdYiMA" />
